updated firmlist features
added vacancyunit checks; created add & delete firmlist features; created candidatelistunit

--- a/Practice.dproj
+++ b/Practice.dproj
@@ -110,6 +110,10 @@
             <Form>VacancyForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="CandidateListUnit.pas">
+            <Form>CandidateListForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
