mainly firmlist changes
firmlist: finished edit feature; added open&save file functions w/o checks; created searchunit
candidatelist: added add feature, basic checks in candidateunit
mainunit: added error type

--- a/Practice.dproj
+++ b/Practice.dproj
@@ -114,6 +114,14 @@
             <Form>CandidateListForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="SearchVacancyUnit.pas">
+            <Form>SearchVacancyForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="CandidateUnit.pas">
+            <Form>CandidateForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
