a little bit of everything
added file save to nonmain units + finished search vacancy unit + remade the structure of list nodes + added editing to candidate list + some fixes

--- a/Practice.dproj
+++ b/Practice.dproj
@@ -115,7 +115,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="VacancySearchUnit.pas">
-            <Form>VacancySearchForm</Form>
+            <Form>SearchForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="CandidateUnit.pas">
