--- a/Practice.dproj
+++ b/Practice.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>19.5</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -99,7 +99,7 @@
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <Icon_MainIcon>C:\Users\Ksenia\Downloads\4105929-bag-briefcase-case-work_113916.ico</Icon_MainIcon>
+        <Icon_MainIcon>Practice_Icon.ico</Icon_MainIcon>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -125,12 +125,20 @@
             <Form>CandidateForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="FindCandidatesUnit.pas">
-            <Form>FindCandidatesForm</Form>
+        <DCCReference Include="CandidateSelectUnit.pas">
+            <Form>CandidateSelectForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="DeficitUnit.pas">
             <Form>DeficitForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="CandidateSearchUnit.pas">
+            <Form>CandidateSearchForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="VacancySearchUnit.pas">
+            <Form>VacancySearchForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Base">
@@ -160,6 +168,12 @@
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\Practice.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>Practice.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win32\Release\Practice.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Practice.exe</RemoteName>
                         <Overwrite>true</Overwrite>
